[gd_scene load_steps=6 format=3 uid="uid://denrfwms0xkc7"]

[ext_resource type="Script" path="res://addons/intervals/editor/multi_event_editor.gd" id="1_8w3a3"]
[ext_resource type="Script" path="res://addons/intervals/editor/multi_event_graph_edit.gd" id="5_vb6tf"]
[ext_resource type="Script" path="res://addons/intervals/editor/multi_event_create_event.gd" id="6_1v6me"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c312x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bb02y"]

[node name="MultiEventEditor" type="VSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
collapsed = true
dragger_visibility = 1
script = ExtResource("1_8w3a3")

[node name="Header" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_constants/separation = 0

[node name="UpEventButton" type="Button" parent="Header"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "^"

[node name="Spacing" type="Control" parent="Header"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2

[node name="UpEventLabel" type="Label" parent="Header"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.22
theme_override_styles/normal = SubResource("StyleBoxEmpty_c312x")
text = " MultiEvent > MultiEvent > "
vertical_alignment = 1

[node name="EventNameEdit" type="TextEdit" parent="Header"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
placeholder_text = "MultiEvent"
scroll_fit_content_height = true

[node name="WarningSpacing" type="Label" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.870588, 0.4, 1)
horizontal_alignment = 1
clip_text = true

[node name="CompletionLabel" type="Label" parent="Header"]
layout_mode = 2
size_flags_horizontal = 8
text = "Completion: "
horizontal_alignment = 2

[node name="OptionButton" type="OptionButton" parent="Header"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "All Branches"
popup/item_1/text = "Any Branch"
popup/item_1/id = 1
popup/item_2/text = "Immediate"
popup/item_2/id = 2

[node name="Spacing2" type="Control" parent="Header"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2

[node name="CyclesBox" type="CheckBox" parent="Header"]
layout_mode = 2
text = "Cycles"

[node name="DebugBox" type="CheckBox" parent="Header"]
layout_mode = 2
text = "Debug"

[node name="Spacing3" type="Control" parent="Header"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2

[node name="ReloadButton" type="Button" parent="Header"]
layout_mode = 2
text = "Reload Editor"

[node name="GraphEdit" type="GraphEdit" parent="."]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
grid_pattern = 1
minimap_enabled = false
show_zoom_label = true
script = ExtResource("5_vb6tf")

[node name="MultiEventCreateEvent" type="GraphElement" parent="GraphEdit"]
visible = false
custom_minimum_size = Vector2(220, 300)
layout_mode = 0
offset_left = 582.0
offset_top = 18.0
offset_right = 802.0
offset_bottom = 318.0
position_offset = Vector2(582, 18)
script = ExtResource("6_1v6me")

[node name="Panel" type="Panel" parent="GraphEdit/MultiEventCreateEvent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_force_pass_scroll_events = false

[node name="Tree" type="Tree" parent="GraphEdit/MultiEventCreateEvent/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_bb02y")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "No MultiEvent selected."
horizontal_alignment = 1
vertical_alignment = 1
